Many HTML & CSS fixes. Website looks now better on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,5 @@
-@media (min-width: 600px) {
-  .columns-2 {
-    -webkit-column-count: 2;
-    -moz-column-count: 2;
-    column-count: 2;
-    -webkit-column-gap: 3em;
-    -moz-column-gap: 3em;
-    column-gap: 3em;
-  }
-}
 
-@media (max-width: 600px) {
-  .columns-2 {
-    -webkit-column-count: 1;
-    -moz-column-count: 1;
-    column-count: 1;
-    -webkit-column-gap: 3em;
-    -moz-column-gap: 3em;
-    column-gap: 3em;
-  }
-}
-
+/* Custom text, background and buttons */
 .text-sa {
 	color: #EF4F53;
 }
@@ -64,6 +44,16 @@ a:hover {
 	max-width: 200px;
 }
 
+/* Hero */ 
+#hero {
+	background: url('../img/bg.jpg');
+	background-size: cover; 
+	background-position: center center;
+	text-shadow: 0 0 3px #000;
+}
+
+
+/* Navigation bar */
 .navbar .logo-text {
 	text-transform: uppercase;
 	font-size: 24px;
@@ -78,15 +68,13 @@ a:hover {
 	margin-top: -21px;
 }
 
-
 .navbar-dark .nav-link {
   	color: #fff !important;
   	opacity: 1;
-  	text-shadow: 0px 0px 2px #000;
+  	text-shadow: 0 0 2px #000;
 }
 
-
-.active {
+.navbar .active {
 	color: #EF4F53 !important;	
 }
 
@@ -94,29 +82,7 @@ a:hover {
 	margin-left: 20px;
 }
 
-#hero {
-	background: url('../img/bg.jpg');
-	background-size: cover; 
-	background-position: center center;
-	text-shadow: 0px 0px 3px #000;
-	height: 80vh;
-}
-
-#hero h1 {
-	margin-top: 25vh;
-}
-
-#hero h2 {
-	margin-top: 5vh;
-}
-
-
-#mountains {
-	width: 100%;
-	position: absolute;
-	bottom: 20vh;
-}
-
+/* Carousel slider */
 .swiper-container {
     width: 100%;
     height: 400px;
@@ -127,11 +93,43 @@ a:hover {
 	background-size: cover;
 }
 
+/* Removing default style */ 
+#tito-button button { border:none; background: none; color: #EF4F53; font-weight: bold; } 
+#tito-button:hover button { color: #fff; } 
+
+
+/* Dark navigation on mobile */
 @media (max-width: 992px) {
 	.navbar {
-		background: rgba(0,0,0,0.88);
+		background: #000;
+		background: rgba(0,0,0,0.8);
 	}	
 }
 
-#tito-button button { border:none; background: none; color: #EF4F53; font-weight: bold; } 
-#tito-button:hover button { color: #fff; } 
+/* Columns for long text */
+
+@media (min-width: 600px) {
+  .columns-2 {
+    -ms-column-count: 2;
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
+    column-count: 2;
+    -ms-column-gap: 3em;
+    -webkit-column-gap: 3em;
+    -moz-column-gap: 3em;
+    column-gap: 3em;
+  }
+}
+
+@media (max-width: 600px) {
+  .columns-2 {
+    -ms-column-count: 1;
+    -webkit-column-count: 1;
+    -moz-column-count: 1;
+    column-count: 1;
+    -ms-column-gap: 3em;
+    -webkit-column-gap: 3em;
+    -moz-column-gap: 3em;
+    column-gap: 3em;
+  }
+}
